# capfence

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  incident_demo.json  index.html  mkdocs.yml  policy-v2.yaml  pyproject.toml  requirements-build.in  requirements-build.txt  requirements-dev.in  requirements-dev.txt  requirements-docs.in  requirements-docs.txt  requirements-pip-tools.txt  requirements.in  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  deploy-docs.yml  pip-compile.yml  policy-validation.yml  release.yml
architecture/approval-lifecycle/: index.html
architecture/audit-chain-design/: index.html
architecture/enforcement-flow/: index.html
architecture/failure-behavior/: index.html
architecture/internal-components/: index.html
architecture/mcp-interception-model/: index.html
architecture/policy-evaluation-model/: index.html
architecture/replay-engine-model/: index.html
architecture/threat-model/: index.html
audit/decision-receipts/: index.html
capfence/: __init__.py  cli.py  errors.py
capfence-demo/: README.md
capfence-demo/tests/: test_capfence_check.py
capfence/core/: approvals.py  audit.py  capabilities.py  chain.py  db.py  gate.py  keys.py  policy.py  policy_backends.py  policy_testing.py  replay.py  runtime.py
capfence/framework/: _base.py  autogen.py  crewai.py  langchain.py  langgraph.py  llamaindex.py  openai_agents.py  pydanticai.py
capfence/mcp/: adapter.py  gateway.py
case-studies/: 01_fintech_payments.md  02_secure_shell_devops.md  03_mcp_boundary_security.md  04_database_ddl_guardrails.md  05_multi_agent_trust_lineage.md  README.md
compliance/eu-ai-act/: index.html
compliance/governance-reporting/: index.html
docs/: index.md  migration.md  product-positioning.md
docs-dev/: CLI.md  FEATURES.md  TESTING_GUIDE.md  THREAT_MODEL.md  approvals.md  mcp-governance.md  production-trust-boundary-checklist.md  repo-hardening-build-plan.md  simulation.md
docs/examples/: demo.cast  (+2 more)
migration/: index.html
product-positioning/: index.html
recipes/: index.html
scripts/: demo.sh
search/: search_index.json
tests/: test_cli_eu_ai_act.py  test_cli_taxonomy.py  test_core_keys.py  test_errors.py  test_framework_additional_adapters.py  test_framework_langchain.py  test_framework_langgraph.py  test_framework_openai_agents.py  test_mcp.py  test_policy_engine.py  test_policy_pack_cli.py  test_redesign_primitives.py  test_semantic_hardening.py  test_thread_safety.py
(+185 files in other folders)
