[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "capfence"
version = "0.8.3"
description = "Authorization gateway for AI agent side effects. CapFence lets agents propose tool calls, then enforces deterministic allow, deny, or approval decisions before shell, database, filesystem, payment, API, or MCP execution."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Anshuman Kumar" }
]
keywords = [
    "authorization",
    "authz",
    "ai-agents",
    "agents",
    "security",
    "policy",
    "audit",
    "mcp",
    "side-effects",
    "fail-closed",
    "tool-calling",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.scripts]
capfence = "capfence.cli:main"

[project.optional-dependencies]
langchain = ["langchain-core>=0.1"]
crewai = ["crewai>=0.30"]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://capfence.dev/"
Repository = "https://github.com/capfencelabs/capfence"
Issues = "https://github.com/capfencelabs/capfence/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = "cryptography.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "capfence._native"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.hatch.build.targets.wheel]
packages = ["capfence"]

[tool.hatch.build.targets.wheel.force-include]
"capfence/py.typed" = "capfence/py.typed"
"policies/packs" = "policies/packs"

[tool.hatch.build.targets.sdist]
include = [
    "capfence",
    "tests",
    "examples",
    "docs",
    "policies",
    "benchmarks",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]
